Add generate invoice link

--- a/freepple/src/index.css
+++ b/freepple/src/index.css
@@ -26,3 +26,13 @@ body {
   background: #334155;
   border-radius: 4px;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
